cluster/apps/ibkr-bot/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ibkr-gateway
spec:
  selector:
    app: ibkr-gateway
  ports:
    - name: novnc
      port: 6080
      targetPort: novnc
    - name: api
      port: 8888
      targetPort: api
    - name: command-server
      port: 7462
      targetPort: command-server
